--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^3",
-    "express": "^4"
+    "express": "^4",
+    "sqlite3": "^4.1.1"
   },
   "scripts": {
     "start": "npx cds run"
+  },
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sqlite"
+      }
+    }
   }
 }
