--- a/app/postings/webapp/manifest.json
+++ b/app/postings/webapp/manifest.json
@@ -1,14 +1,14 @@
 {
     "_version": "1.8.0",
     "sap.app": {
-        "id": "weVsVirus.nextToMe.neighbours",
+        "id": "weVsVirus.nextToMe.postings",
         "type": "application",
         "title": "Meine Nachbarn",
         "description": "",
         "i18n": "i18n/i18n.properties",
         "dataSources": {
-            "NeighboursService": {
-                "uri": "/neighbours/",
+            "PostingsService": {
+                "uri": "/postings/",
                 "type": "OData",
                 "settings": {
                     "odataVersion": "4.0"
@@ -33,7 +33,7 @@
                 "uri": "i18n/i18n.properties"
             },
             "": {
-                "dataSource": "NeighboursService",
+                "dataSource": "PostingsService",
                 "settings": {
                     "synchronizationMode": "None",
                     "operationMode": "Server",
@@ -51,52 +51,30 @@
             "routes": [
                 {
                     "pattern": ":?query:",
-                    "name": "NeighboursList",
-                    "target": "NeighboursList"
+                    "name": "PostingsList",
+                    "target": "PostingsList"
                 },
                 {
-                    "pattern": "Neighbours({key}):?query:",
-                    "name": "NeighbourDetails",
-                    "target": "NeighbourDetails"
-                },
-                {
-                    "pattern": "Neighbours({key})/postings({key2}):?query:",
+                    "pattern": "Postings({key}):?query:",
                     "name": "PostingDetails",
                     "target": "PostingDetails"
                 },
                 {
-                    "pattern": "Neighbours({key})/postings({key2})/items({key3}):?query:",
+                    "pattern": "Postings({key}/postings({key2}):?query:",
                     "name": "ItemDetails",
                     "target": "ItemDetails"
                 }
             ],
             "targets": {
-                "NeighboursList": {
+                "PostingsList": {
                     "type": "Component",
-                    "id": "NeighboursList",
+                    "id": "PostingsList",
                     "name": "sap.fe.templates.ListReport",
                     "options": {
                         "settings": {
-                            "entitySet": "Neighbours",
+                            "entitySet": "Postings",
                             "navigation": {
-                                "Neighbours": {
-                                    "detail": {
-                                        "route": "NeighbourDetails"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "NeighbourDetails": {
-                    "type": "Component",
-                    "id": "NeighbourDetails",
-                    "name": "sap.fe.templates.ObjectPage",
-                    "options": {
-                        "settings": {
-                            "entitySet": "Neighbours",
-                            "navigation": {
-                                "postings": {
+                                "Postings": {
                                     "detail": {
                                         "route": "PostingDetails"
                                     }
@@ -111,14 +89,7 @@
                     "name": "sap.fe.templates.ObjectPage",
                     "options": {
                         "settings": {
-                            "entitySet": "Postings",
-                            "navigation": {
-                                "items": {
-                                    "detail": {
-                                        "route": "ItemDetails"
-                                    }
-                                }
-                            }
+                            "entitySet": "Postings"
                         }
                     }
                 },
@@ -128,7 +99,14 @@
                     "name": "sap.fe.templates.ObjectPage",
                     "options": {
                         "settings": {
-                            "entitySet": "Items"
+                            "entitySet": "Items",
+                            "navigation": {
+                                "Projects": {
+                                    "detail": {
+                                        "route": "ItemDetails"
+                                    }
+                                }
+                            }
                         }
                     }
                 }
